--- a/react-todo/package.json
+++ b/react-todo/package.json
@@ -12,8 +12,11 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-  "test": "jest"
-},
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "jest",
+    "eject": "react-scripts eject"
+  },
   "eslintConfig": {
     "extends": [
       "react-app",
